# AuthZilla

./: .gitignore  README.md  pyproject.toml
corezilla/: run.py
corezilla/app/: __init__.py
corezilla/app/controllers/: AuthenticationApi.py  AuthorizationApi.py  ClientsApi.py  UserAPI.py  WebController.py  auth_api_controller.py  client_api_controller.py  oauth_api_controller.py  user_api_controller.py  web_controller.py
corezilla/app/models/: Base.py  Client.py  Connection.py  InstallationRecords.py  Token.py  User.py  __init__.py
corezilla/app/schemas/: create_client_request_schema.py  create_client_response_schema.py  oauth_schema.py  update_client_request_schema.py  user_schema.py
corezilla/app/services/: AuthorizationCodeService.py  ClientService.py  TokenService.py  UserService.py
corezilla/app/utils/: handlers.py  uri_validators.py
corezilla/app/views/templates/: 400.html  401.html  404.html  500.html  base.html  client.html  clients.html  connections.html  create_client.html  generic.html  (+5 more)
corezilla/config/: default.py  dev.py  test.py
corezilla/tests/: conftest.py
corezilla/tests/unit/: client_tests.py  test_authorization_api.py  test_authorization_code.py  test_client.py  test_token_service.py  test_user_api.py
migrations/versions/: 3d2d5230090b_add_metadata_blob_and_configuration_.py  40681c58c550_fixes_an_issue_in_the_relationship_.py  81185b98fdf7_fixes_connection_between_connections_.py  84cee9706b8c_add_user_id_foreign_key_to_client_model_.py  cc8f8e1173b3_add_support_for_saml_configuration.py  f83aa019faa4_adds_a_token_table.py
(+2 files in other folders)
